# brainX_back/Intelligence-Service/src/main/java/com/brainx/intelligence/infrastructure/persistence/jpa/note/NoteProjectionJpaRepository.java
@@ -26,6 +26,8 @@ interface NoteProjectionJpaRepository extends JpaRepository<NoteProjectionJpaEnt
         Collection<String> noteIds
     );
 
+    void deleteByUserIdAndDocumentGroupIdAndNoteId(String userId, String documentGroupId, String noteId);
+
     @Query("""
         select projection
         from NoteProjectionJpaEntity projection
